--- a/src/components/form-to-book/form-to-book.pug
+++ b/src/components/form-to-book/form-to-book.pug
@@ -30,6 +30,6 @@ mixin form-to-book()
       span.form-to-book__text-total 38 081₽ 
     div.form-to-book__item
       include ../buttons/buttons.pug
-      +buttons('забронировать','btnForm') 
+      +buttons('забронировать','btn-Form') 
 
 
