--- a/src/components/room-search/room-search.pug
+++ b/src/components/room-search/room-search.pug
@@ -16,4 +16,4 @@ mixin room-search(title)
       })
     div.room-search__item 
      include ../buttons/buttons.pug
-     +buttons('подобрать номер','btnForm','','search-room.html')
+     +buttons('подобрать номер','btn-Form','','search-room.html')
