--- a/src/components/sign-in/sign-in.pug
+++ b/src/components/sign-in/sign-in.pug
@@ -9,7 +9,7 @@ mixin sign-in()
       +input-form({placeholder:'Пароль'})
     div.sign-in__item
       include ../buttons/buttons.pug
-      +buttons('Войти','btnForm')
+      +buttons('Войти','btn-Form')
     div.sign-in__item
       span.sign-in__item-text Нет аккаунта на Toxin?
       include ../buttons/buttons.pug
