--- a/src/uikit-page/form-elements/form-elements.pug
+++ b/src/uikit-page/form-elements/form-elements.pug
@@ -146,7 +146,7 @@ html
             +buttons('CLICK ME','justBtn')
           div.form-elements__row-btn-item
             include ../../components/buttons/buttons.pug
-            +buttons('перейти к оплате','btnForm')
+            +buttons('перейти к оплате','btn-Form')
           div.form-elements__row-btn-item
             div.form-elements__row-btn-item-title pagination
             include ../../components/pagination/pagination.pug
