--- a/src/components/account-registration/account-registration.pug
+++ b/src/components/account-registration/account-registration.pug
@@ -26,7 +26,7 @@ mixin account-registration(title)
       +toggle('Получать спецпредложения',false)
     div.account-registration__item
       include ../buttons/buttons.pug
-      +buttons('перейти к оплате','btnForm')
+      +buttons('перейти к оплате','btn-Form')
     div.account-registration__item
       div.account-registration__footer
         span Уже есть аккаунт на Toxin
