#15 add eslint and fix code

--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -3,4 +3,4 @@ mixin range-slider(label,text)
     div.range-slider__item
       label.range-slider__label(for="amount")= label
       input.range-slider__input(type="text" disabled id="amount" readonly)
-    #slider-range
+    .js-slider-range
