--- a/src/room-details/room-details.pug
+++ b/src/room-details/room-details.pug
@@ -32,9 +32,9 @@ html
               include ../components/text-list/text-list.pug
               +comfortList({
                 list : [
-                {className:'text-list_smile', title:'Комфорт', subTitle:'Шумопоглощающие стены'},
-                {className:'text-list_city', title:'Удобство', subTitle:'Окно в каждой из спален'},
-                {className:'text-list_comfort', title:'Уют', subTitle:'Номер оснащен камином '},
+                {imgName:'smile', title:'Комфорт', subTitle:'Шумопоглощающие стены'},
+                {imgName:'city', title:'Удобство', subTitle:'Окно в каждой из спален'},
+                {imgName:'comfort', title:'Уют', subTitle:'Номер оснащен камином '},
               ]
               })
             div.room-details__description-status-right
