--- a/src/components/text-list/text-list.pug
+++ b/src/components/text-list/text-list.pug
@@ -2,10 +2,10 @@ mixin comfortList(options= {})
   -
     const {
       list = [
-        {className:'text-list_smile', title:'Комфорт', subTitle:'Шумопоглощающие стены'},
-        {className:'text-list_city', title:'Удобство', subTitle:'Окно в каждой из спален'},
+        {imgName:'smile', title:'Комфорт', subTitle:'Шумопоглощающие стены'},
+        {imgName:'city', title:'Удобство', subTitle:'Окно в каждой из спален'},
       ]} = options;
-  -for(let {className,title,subTitle} of list)
-    section(class = 'text-list '+className)
+  -for(let {imgName,title,subTitle} of list)
+    section(class = `text-list text-list_${imgName}`)
       div.text-list__title=title
       div.text-list__subtTitle=subTitle
