--- a/src/components/room-search/room-search.scss
+++ b/src/components/room-search/room-search.scss
@@ -1,3 +1,8 @@
+@import '../two-input-range/two-input-range.scss';
+@import '../drop-down/drop-down.scss';
+@import '../buttons/buttons.scss';
+@import '../data-drop-down/data-drop-down.scss';
+
 .room-search {
   display: flex;
   flex-direction: column;
