--- a/src/components/account-registration/account-registration.scss
+++ b/src/components/account-registration/account-registration.scss
@@ -1,3 +1,9 @@
+@import '../input-form/input-form.scss';
+@import '../input-form-mask/input-form-mask.scss';
+@import '../radio-buttons/radio-buttons.scss';
+@import '../toggle/toggle.scss';
+
+
 .account-registration {
   max-width: 380px;
   background: #ffffff;
