--- a/src/components/input-form/input-form.scss
+++ b/src/components/input-form/input-form.scss
@@ -17,7 +17,7 @@
   &__email-btn{
     width: 44px;
     height: 44px;
-    background: url('../../img/arrow-forward.svg')no-repeat 50%;
+    background: url('/img/arrow-forward.svg')no-repeat 50%;
     position: absolute;
     z-index: 3;
     right: 0px;
