--- a/src/pages/ui-kit/color-and-type/color-and-type.scss
+++ b/src/pages/ui-kit/color-and-type/color-and-type.scss
@@ -1,3 +1,7 @@
+@import '../../../main.scss';
+@import '../../../components/color-item/color-item.scss';
+@import '../../../components/color-text/color-text.scss';
+
 .colorsAndType {
   margin: 145px 158px 145px 150px;
   position: relative;
@@ -9,7 +13,7 @@
     content: '';
     width: 48px;
     height: 48px;
-    background: url('../../img/main-logo.svg')no-repeat;
+    background: url('../../../img/main-logo.svg')no-repeat;
     position: absolute;
     top: -117px;
     left: -121px;
