--- a/src/pages/web/search-room/search-room.scss
+++ b/src/pages/web/search-room/search-room.scss
@@ -1,3 +1,12 @@
+@import '../../../main.scss';
+@import '../../../components/head/head.scss';
+@import '../../../components/drop-down/drop-down.scss';
+@import '../../../components/checkbox-list/checkbox-list.scss';
+@import '../../../components/rich-checkbox-btn/rich-checkbox-btn.scss';
+@import '../../../components/drop-down-bed/drop-down-bed.scss';
+@import '../../../components/pagination/pagination.scss';
+@import '../../../components/footer/footer.scss';
+
 .search-room {
   max-width: 1440px;
   margin: 0px auto;
