--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -53,7 +53,7 @@
     content: '';
     width: 44px;
     height: 44px;
-    background: url('../../img/arrow_forward.svg')no-repeat 0px 0px;
+    //background: url('/img/arrow_forward.svg')no-repeat 0px 0px;
     position: absolute;
     right: -12px;
   }
