--- a/src/components/data-drop-down/data-drop-down.scss
+++ b/src/components/data-drop-down/data-drop-down.scss
@@ -14,7 +14,7 @@
     font-size: 0.875rem;
     line-height: 1.125rem;
     color: rgba(31, 32, 65, 0.75);
-    background: #fff url(../../img/arrow-down.svg) no-repeat 7.125rem 0.6875rem;
+    //background: #fff url(./img/arrow-down.svg) no-repeat 7.125rem 0.6875rem;
     box-sizing: border-box;
 }
 .datepicker-filter {
@@ -26,7 +26,7 @@
     font-size: 0.875rem;
     line-height: 1.125rem;
     color: rgba(31, 32, 65, 0.75);
-    background: #fff url(../../img/arrow-down.svg) no-repeat right 0.625rem center;
+   // background: #fff url(./img/arrow-down.svg) no-repeat right 0.625rem center;
     box-sizing: border-box;
 }
 @media screen and (max-width: 550px) {
