--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -28,7 +28,7 @@
     line-height: 24px;
     margin-right: 18px;
     padding-top: 53px;
-    background:url('../../img/Logo.svg')no-repeat 0px -3px
+    //background:url('../../img/Logo.svg')no-repeat 0px -3px
   }
   &__list {
     font-weight: bold;
