--- a/src/components/form-to-book/form-to-book.scss
+++ b/src/components/form-to-book/form-to-book.scss
@@ -4,7 +4,7 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 47px 30px 30px 30px;
-  background:#ffffff url('../../img/Rectangle2.svg')no-repeat 90px 412px;
+  //background:#ffffff url('../../img/Rectangle2.svg')no-repeat 90px 412px;
   &__header {
     display: flex;
     justify-content: space-between;
