--- a/src/components/like-button/like-button.scss
+++ b/src/components/like-button/like-button.scss
@@ -3,7 +3,7 @@
   height: 20px;
   border: 1px solid rgba(31, 32, 65, 0.25);
   border-radius: 10px;
-  background: url('../../img/favorite_border.svg')no-repeat 4px 4px;
+  background: url('/img/favorite_border.svg')no-repeat 4px 4px;
   
   &__count {
     color: rgba(31, 32, 65, 0.25);
@@ -12,7 +12,7 @@
   }
 }
 .like-button_action{
-  background: url('../../img/favorite.svg')no-repeat 4px 4px;
+  background: url('/img/favorite.svg')no-repeat 4px 4px;
   color: #BC9CFF;
   border-color:#BC9CFF;
 }
