--- a/src/components/rate-btn/rate-btn.scss
+++ b/src/components/rate-btn/rate-btn.scss
@@ -5,17 +5,17 @@
     transition: 0.2s;
     &:hover,
     &:hover ~ & {
-      background: url("../../img/star.svg") no-repeat 1px 1px;
+      background: url("/img/star.svg") no-repeat 1px 1px;
     }
     width: 24px;
     height: 24px;
-    background: url("../../img/star_border.svg") no-repeat 1px 1px;
+    background: url("/img/star_border.svg") no-repeat 1px 1px;
   }
   &[data-total-value="1"] &__item:nth-child(n + 5),
   &[data-total-value="2"] &__item:nth-child(n + 4),
   &[data-total-value="3"] &__item:nth-child(n + 3),
   &[data-total-value="4"] &__item:nth-child(n + 2),
   &[data-total-value="5"] &__item:nth-child(n + 1),{
-    background: url('../../img/star.svg')no-repeat 1px 1px;
+    background: url('/img/star.svg')no-repeat 1px 1px;
   }
 }
