--- a/src/components/two-input-range/two-input-range.scss
+++ b/src/components/two-input-range/two-input-range.scss
@@ -16,7 +16,7 @@
     font-size: 0.875rem;
     line-height: 1.125rem;
     color: rgba(31, 32, 65, 0.75);
-    background: #fff url(../../img/arrow-down.svg) no-repeat 7.125rem 0.6875rem;
+    //background: #fff url(../../img/arrow-down.svg) no-repeat 7.125rem 0.6875rem;
     box-sizing: border-box;
   }
 
@@ -31,6 +31,6 @@
     height: 2.75rem;
     font-size: 0.675rem;
     color: rgba(31, 32, 65, 0.75);
-    background: #fff url(../../img/arrow-down.svg) no-repeat 5.5rem 0.6875rem;
+    //background: #fff url(../../img/arrow-down.svg) no-repeat 5.5rem 0.6875rem;
   }
 }
