--- a/src/pages/ui-kit/cards/cards.scss
+++ b/src/pages/ui-kit/cards/cards.scss
@@ -1,7 +1,13 @@
+@import '../../../main.scss';
+@import '../../../components/room-search/room-search.scss';
+@import '../../../components/account-registration/account-registration.scss';
+@import '../../../components/form-to-book/form-to-book.scss';
+@import '../../../components/sign-in/sign-in.scss';
+
 .cards {
   max-width: 1440px;
   padding: 150px 140px 140px 140px;
-  background: #e5e5e5 url("../../img/main-logo.svg") no-repeat 30px 30px;
+  background: #e5e5e5 url("../../../img/main-logo.svg") no-repeat 30px 30px;
   display: flex;
   &__left-colum {
     display: flex;
