--- a/src/pages/ui-kit/header-and-footer/header-and-footer.scss
+++ b/src/pages/ui-kit/header-and-footer/header-and-footer.scss
@@ -1,8 +1,12 @@
+@import '../../../main.scss';
+@import '../../../components/head/head.scss';
+@import '../../../components/footer/footer.scss';
+
 .header-and-footer {
   background-color: #e5e5e5;
   &__wrap{
     padding: 148px 0px;
-    background:#e5e5e5 url("../../img/main-logo.svg") no-repeat 30px 30px;
+    background:#e5e5e5 url("../../../img/main-logo.svg") no-repeat 30px 30px;
   }
 
   &__item{
