--- a/src/pages/web/registration/registration.scss
+++ b/src/pages/web/registration/registration.scss
@@ -1,3 +1,8 @@
+@import '../../../main.scss';
+@import '../../../components/head/head.scss';
+@import '../../../components/account-registration/account-registration.scss';
+@import '../../../components/footer/footer.scss';
+
 .main-sign-in {
   max-width: 1440px;
   margin: 0px auto;
@@ -5,5 +10,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url('../img/sign-in.png')no-repeat 50%;
+  background: url('../../../img/sign-in.png')no-repeat 50%;
 }
