--- a/src/components/data-drop-down/data-drop-down.pug
+++ b/src/components/data-drop-down/data-drop-down.pug
@@ -1,6 +1,6 @@
 mixin data-drop-down-filter(title)
-  if(title)
-    div.data-drop-down-filter__title=title 
-    input.datepicker-here.datepicker-filter(type="text" data-range="true" data-multiple-dates-separator=" - " data-clear-Button="true" data-apply-Button="true" dateFormat="dd")
-  else
-    input.datepicker-here.data-drop-down__input(type="text" placeholder="ДД.ММ.ГГГГ" data-clear-Button="true" data-apply-Button="true")
+  //- if(title)
+  //-   div.data-drop-down-filter__title=title 
+  //-   input.datepicker-here.datepicker-filter(type="text" data-range="true" data-multiple-dates-separator=" - " data-clear-Button="true" data-apply-Button="true" dateFormat="dd")
+  //- else
+  //-   input.datepicker-here.data-drop-down__input(type="text" placeholder="ДД.ММ.ГГГГ" data-clear-Button="true" data-apply-Button="true")
