--- a/src/components/room-search/room-search.scss
+++ b/src/components/room-search/room-search.scss
@@ -1,4 +1,4 @@
-@import '../two-input-range/two-input-range.scss';
+@import '../calendar/calendar.scss';
 @import '../drop-down/drop-down.scss';
 @import '../buttons/buttons.scss';
 @import '../data-drop-down/data-drop-down.scss';
