--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -15,6 +15,7 @@
 @import '../../../components/buttons/buttons.scss';
 @import '../../../components/pagination/pagination.scss';
 @import '../../../components/bullet-list/bullet-list.scss';
+@import '../../../components/calendar/calendar.scss';
 
 .form-elements {
   max-width: 1440px;
