#13 add npm slick

--- a/src/pages/ui-kit/cards/cards.scss
+++ b/src/pages/ui-kit/cards/cards.scss
@@ -3,6 +3,7 @@
 @import '../../../components/account-registration/account-registration.scss';
 @import '../../../components/form-to-book/form-to-book.scss';
 @import '../../../components/sign-in/sign-in.scss';
+@import '../../../components/slide/slide.scss';
 
 .cards {
   max-width: 1440px;
