--- a/src/components/slide/slide.scss
+++ b/src/components/slide/slide.scss
@@ -30,7 +30,8 @@
   }
 }
 .slick-prev {
-  background: url(./expand_more.svg) no-repeat 50%;
+  //background: url(./expand_more.svg) no-repeat 50%;
+  
   width: 44px;
   height: 44px;
   font-size: 0px;
@@ -40,7 +41,7 @@
   z-index: 1;
 }
 .slick-next {
-  background: url(./expand_more-1.svg) no-repeat 50%;
+  //background: url(./expand_more-1.svg) no-repeat 50%;
   width: 44px;
   height: 44px;
   font-size: 0px;
