--- a/src/pages/web/search-room/search-room.scss
+++ b/src/pages/web/search-room/search-room.scss
@@ -4,6 +4,7 @@
 @import '../../../components/checkbox-list/checkbox-list.scss';
 @import '../../../components/rich-checkbox-btn/rich-checkbox-btn.scss';
 @import '../../../components/drop-down-bed/drop-down-bed.scss';
+@import '../../../components/slide/slide.scss';
 @import '../../../components/pagination/pagination.scss';
 @import '../../../components/footer/footer.scss';
 
