--- a/src/components/drop-down-bed/drop-down-bed.scss
+++ b/src/components/drop-down-bed/drop-down-bed.scss
@@ -22,7 +22,7 @@
     color: rgba(31, 32, 65, 0.75);
     border-radius: 4px 4px 0px 0px;
     width: 100%;
-    background: url('/img/arrow-down.svg') no-repeat 285px 9px;
+    background: url(/img/arrow-down.svg) no-repeat 232px 6px;
   }
   &__titleBtn-img {
     margin-right: 9px;
