--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -1,5 +1,5 @@
 mixin range-slider(label, text)
-  .range-slider
+  .range-slider.js-range-slider
     div.range-slider__item
       label.range-slider__label(for="amount")= label
       input.range-slider__input(type="text" disabled id="amount" readonly)
