--- a/src/components/rate-btn/rate-btn.scss
+++ b/src/components/rate-btn/rate-btn.scss
@@ -1,21 +1,70 @@
 .rating {
-  display: inline-flex;
-  flex-direction: row-reverse;
-  &__item {
-    transition: 0.2s;
-    &:hover,
-    &:hover ~ & {
-      background: url("/img/star.svg") no-repeat 1px 1px;
+  width: 7.5rem;
+  height: 1.5rem;
+  display: flex;
+  position: relative;
+  $size: 1.5rem;
+
+  &__input {
+    cursor: pointer;
+    z-index: 2;
+    width: 1.5rem;
+    height: 1.5rem;
+    position: absolute;
+    opacity: 0;
+
+    @for $i from 1 through 5 {
+      &:nth-of-type(#{$i}) {
+        margin-left: 1.5rem * (5 - $i);
+      }
     }
-    width: 24px;
-    height: 24px;
-    background: url("/img/star_border.svg") no-repeat 1px 1px;
+
+    & + .rating__image-of-star::before {
+      content: '';
+      width: 1.5rem;
+      height: 1.5rem;
+      display: flex;
+      align-items: center;
+      text-align: center;
+      position: absolute;
+      background: url("/img/star_border.svg") no-repeat 1px 1px;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-family: Material Icons;
+      font-size: 1.5rem;
+      line-height: 1.25rem;
+    }
+    &:checked ~ .rating__image-of-star::after {
+      content: '';
+      width: 1.5rem;
+      height: 1.5rem;
+      display: flex;
+      align-items: center;
+      text-align: center;
+      position: absolute;
+      background: url("/img/star.svg") no-repeat 1px 1px;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-family: Material Icons;
+      font-size: 1.5rem;
+      line-height: 1.25rem;
+    }
   }
-  &[data-total-value="1"] &__item:nth-child(n + 5),
-  &[data-total-value="2"] &__item:nth-child(n + 4),
-  &[data-total-value="3"] &__item:nth-child(n + 3),
-  &[data-total-value="4"] &__item:nth-child(n + 2),
-  &[data-total-value="5"] &__item:nth-child(n + 1),{
-    background: url('/img/star.svg')no-repeat 1px 1px;
+
+  &__image-of-star {
+    z-index: 1;
+    width: 1.5rem;
+    height: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+
+    @for $i from 1 through 5 {
+      &:nth-of-type(#{$i}) {
+        margin-left: 1.5rem * (5 - $i);
+      }
+    }
   }
 }
+
